мелкие поправки после замечаний

--- a/promoutions.html
+++ b/promoutions.html
@@ -3,12 +3,12 @@
 <head>
     <title>Продвижение</title>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=no"/>
     <link rel="icon" href="images/favicon.ico">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css"/>
-    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" />
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"/>
     <!--<script src="js/jquery.js"></script>-->
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/superfish.js"></script>
@@ -24,15 +24,17 @@
     <script src="js/brif_promo.js"></script>
     <!--<script src="js/wow.js"></script>-->
     <script>
-        $(window).load(function(){
-            $().UItoTop({ easingType: 'easeOutQuart' });
+        $(window).load(function () {
+            $().UItoTop({easingType: 'easeOutQuart'});
             $('#stuck_container').tmStickUp({});
         });
     </script>
     <!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0"
+                 height="42" width="820"
+                 alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
         </a>
     </div>
     <![endif]-->
@@ -67,10 +69,10 @@
                     <div class="navigation ">
                         <nav>
                             <ul class="sf-menu">
-                                <li ><a href="index.html">Главная</a></li>
+                                <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
                                 <li class="current"><a href="services.html">Услуги</a></li>
-                                <li><a href="blog.html">Новости</a></li>
+                                <li><a href="news.html">Новости</a></li>
                                 <li><a href="contacts.html">Контакты</a></li>
                             </ul>
                         </nav>
@@ -125,8 +127,10 @@
                             (SEO, контекстная и баннерная реклама, ретаргетинг),
                             которые быстро выделят вас в результатах поисковой
                             выдачи именно в вашей области.
-                            Станьте лидером вместе с LimeMedia!</p>
+                            Станьте лидером вместе с Лайм Медиа!</p>
+
                         <h3>Контекстная реклама</h3>
+
                         <div class="row review_block">
                             <div class="grid_7 reset_align">
                                 <div class="image_content_other">Контекстная реклама</div>
@@ -136,9 +140,20 @@
                                 <strong>от 3 000 000 бел.руб</strong>
                             </div>
                         </div>
-                        <p>Контекстная реклама – один из наиболее быстрых и надежных способов вывести свой сайт на первые позиции выдачи в поисковых системах Яндекс и Google. При помощи нехитрых технологий можно легко привести на свой ресурс аудиторию, интересующуюся определенной тематикой. Специалисты компании LimeMedia в совершенстве владеют всеми премудростями контекстной рекламы и готовы предоставить свои бесценные навыки и опыт к вашим услугам.</p>
+                        <p>Контекстная реклама – один из наиболее быстрых и надежных способов вывести свой сайт на
+                            первые позиции выдачи в поисковых системах Яндекс и Google. При помощи нехитрых технологий
+                            можно легко привести на свой ресурс аудиторию, интересующуюся определенной тематикой.
+                            Специалисты компании Лайм Медиа в совершенстве владеют всеми премудростями контекстной
+                            рекламы и готовы предоставить свои бесценные навыки и опыт к вашим услугам.</p>
+
                         <h3>Продвижение в социальных сетях(SMM)</h3>
-                        <p>Продвижение в социальных сетях (Social Media Marketing, SMM) – стремительно набирающая обороты сфера рекламной деятельности. Если вы хотите, чтоб вас знали, о вас говорили, про вас помнили – это идеальный вариант раскрутки. На сегодняшний день совсем немного агентств занимается этим сложным, но поистине эффективным типом раскрутки. И LimeMedia – как раз одно из таких агентств. Мы имеем немалый опыт в этой сфере, и можем легко заставить широкую публику говорить о ваших успехах.</p>
+
+                        <p>Продвижение в социальных сетях (Social Media Marketing, SMM) – стремительно набирающая
+                            обороты сфера рекламной деятельности. Если вы хотите, чтоб вас знали, о вас говорили, про
+                            вас помнили – это идеальный вариант раскрутки. На сегодняшний день совсем немного агентств
+                            занимается этим сложным, но поистине эффективным типом раскрутки. И Лайм Медиа – как раз
+                            одно из таких агентств. Мы имеем немалый опыт в этой сфере, и можем легко заставить широкую
+                            публику говорить о ваших успехах.</p>
                         <table width="100%" cellspacing="0" cellpadding="0" border="0" class="price-table">
                             <tbody>
                             <tr>
@@ -197,9 +212,17 @@
                             </tbody>
                         </table>
                         <H3>SEO</H3>
-                        <p>Поисковая оптимизация (Search Engine Optimisation, SEO)  включает в себя целый комплекс услуг, направленных на улучшение позиции сайта в рейтингах поисковых машин Яндекс и Google. Сюда входит аудит сайта, его внутренняя оптимизация, а также целенаправленное активное продвижение по определенным тематическим словами и словосочетаниям. Все это вы можете заказать в компании LimeMedia, мы с радостью проведем для вас предварительный анализ сайта и совершенно бесплатно предоставим прогнозы по поисковой оптимизации и дальнейшему продвижению.</p>
 
-                        <div class=" button_services"><a href="#brifpromoution" class="fancybox">заказать услугу</a></div>
+                        <p>Поисковая оптимизация (Search Engine Optimisation, SEO) включает в себя целый комплекс услуг,
+                            направленных на улучшение позиции сайта в рейтингах поисковых машин Яндекс и Google. Сюда
+                            входит аудит сайта, его внутренняя оптимизация, а также целенаправленное активное
+                            продвижение по определенным тематическим словами и словосочетаниям. Все это вы можете
+                            заказать в компании Лайм Медиа, мы с радостью проведем для вас предварительный анализ сайта
+                            и совершенно бесплатно предоставим прогнозы по поисковой оптимизации и дальнейшему
+                            продвижению.</p>
+
+                        <div class=" button_services"><a href="#brifpromoution" class="fancybox">заказать услугу</a>
+                        </div>
                     </div>
                     <!--</div>-->
                     <!--</div>-->
@@ -216,19 +239,20 @@
     <div class="container">
         <div class="row">
             <div class="grid_8">
-                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> | <a href="#">Все права защищены</a>
+                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> |
+                    <a href="#">Все права защищены</a>
                     <!--<div class="sub-copy">Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>-->
                 </div>
             </div>
             <div class="grid_4">
                 <!--<div class="social_container wow bounceInRight animated">-->
-                    <!--<ul>-->
-                        <!--<li><a href="#"><img src="images/vk.png"/></a></li>-->
-                        <!--<li><a href="#"><img src="images/facebook.png"/></a></li>-->
-                        <!--<li><a href="#"><img src="images/twitter.png"/></a></li>-->
-                        <!--<li><a href="#"><img src="images/instagram.png"/></a></li>-->
-                        <!--<li><a href="#"><img src="images/linkedin.png"/></a></li>-->
-                    <!--</ul>-->
+                <!--<ul>-->
+                <!--<li><a href="#"><img src="images/vk.png"/></a></li>-->
+                <!--<li><a href="#"><img src="images/facebook.png"/></a></li>-->
+                <!--<li><a href="#"><img src="images/twitter.png"/></a></li>-->
+                <!--<li><a href="#"><img src="images/instagram.png"/></a></li>-->
+                <!--<li><a href="#"><img src="images/linkedin.png"/></a></li>-->
+                <!--</ul>-->
                 <!--</div>-->
             </div>
         </div>
@@ -238,28 +262,31 @@
     <!--фора для продвижения-->
     <form id="brifpromoution" class="pop_form">
         <h3>Контактная информация</h3>
-        <input type="text" name="name"  placeholder="Имя контактного лица" required=""/>
-        <input type="email" name="email"  placeholder="Email" required="" />
-        <input type="text" name="phone" placeholder="Телефон" />
-        <input type="text" name="company_name" placeholder="Название компании" />
+        <input type="text" name="name" placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email" placeholder="Email" required=""/>
+        <input type="text" name="phone" placeholder="Телефон"/>
+        <input type="text" name="company_name" placeholder="Название компании"/>
+
         <h3>Вид продвижения</h3>
         <label><input type="checkbox" name="check[]" value="context" checked/>Контекстная реклама </label><br>
         <label><input type="checkbox" name="check[]" value="smm"/>Продвижение в соц.сетях (SMM)</label><br>
-        <label><input type="checkbox" name="check[]" value="seo" />SEO</label><br>
+        <label><input type="checkbox" name="check[]" value="seo"/>SEO</label><br>
         <!--<input type="checkbox" name="smm" value="smm" /> Продвижение в соц.сетях (SMM)<br/>-->
         <!--<input type="checkbox" name="seo" value="seo" /> SEO<br/>-->
-        <input type="text" name="thing_promoution" placeholder="Товар, услуга для продвижения" />
+        <input type="text" name="thing_promoution" placeholder="Товар, услуга для продвижения"/>
+
         <h3>Дополнительная информация</h3>
-        <textarea rows="4" cols="50" name="desire" placeholder="Пожелания" ></textarea>
-        <input type="text" name="select_price" placeholder="Ориентировочный бюджет" />
+        <textarea rows="4" cols="50" name="desire" placeholder="Пожелания"></textarea>
+        <input type="text" name="select_price" placeholder="Ориентировочный бюджет"/>
         <!--<select type="text" name="select_price" >-->
         <!--<option value="0" selected>Ориентировочный бюджет</option>-->
-        <!--<option value="1" >По дешевле</option>-->
+        <!--<option value="1" >Подешевле</option>-->
         <!--<option value="2" >Классический вариант</option>-->
         <!--<option value="3" >Сайт премиум уровня</option>-->
         <!--</select>-->
-        <input type="text" name="know" placeholder="Откуда узнали о нас" />
-        <button type="submit" class="btn">Отправить</button><br />
+        <input type="text" name="know" placeholder="Откуда узнали о нас"/>
+        <button type="submit" class="btn">Отправить</button>
+        <br/>
     </form>
 </div>
 <a href="#" id="toTop" class="fa fa-chevron-up"></a>
