--- a/service-design.html
+++ b/service-design.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Lime Media</title>
+    <title>Дизайн</title>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=no"/>
     <link rel="icon" href="images/favicon.ico">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css"/>
-    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" />
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"/>
     <script src="js/jquery.js"></script>
     <script src="js/superfish.js"></script>
     <script src="js/jquery.equalheights.js"></script>
@@ -21,15 +21,17 @@
     <script src="js/common.js"></script>
     <script src="js/wow.js"></script>
     <script>
-        $(window).load(function(){
-            $().UItoTop({ easingType: 'easeOutQuart' });
+        $(window).load(function () {
+            $().UItoTop({easingType: 'easeOutQuart'});
             $('#stuck_container').tmStickUp({});
         });
     </script>
     <!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-            <img src="http://storage.ie6countdown.com/assets/100images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+            <img src="http://storage.ie6countdown.com/assets/100images/banners/warning_bar_0000_us.jpg" border="0"
+                 height="42" width="820"
+                 alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
         </a>
     </div>
     <![endif]-->
@@ -64,10 +66,10 @@
                     <div class="navigation ">
                         <nav>
                             <ul class="sf-menu">
-                                <li ><a href="index.html">Главная</a></li>
+                                <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
                                 <li class="current"><a href="services.html">Услуги</a></li>
-                                <li><a href="blog.html">Новости</a></li>
+                                <li><a href="news.html">Новости</a></li>
                                 <li><a href="contacts.html">Контакты</a></li>
                             </ul>
                         </nav>
@@ -115,6 +117,7 @@
 
                     <div class="text_service">
                         <h2>Дизайн</h2>
+
                         <p>
                             Вы хотите создать или изменить логотип, разработать
                             свой собственный фирменный стиль? Мы можем и это.
@@ -122,8 +125,10 @@
                             все ваши самые смелые задумки и идеи, даст пару
                             дельных советов или придаст новый современный стиль
                             уже устаревшим графическим элементам.
-                            Становитесь ярче вместе с LimeMedia!</p>
+                            Становитесь ярче вместе с Лайм Медиа!</p>
+
                         <h3>Логотип</h3>
+
                         <div class="row review_block">
                             <div class="grid_7 reset_align">
                                 <div class="image_content_other">Разработка логотипа</div>
@@ -133,8 +138,15 @@
                                 <strong>от 3 000 000 бел.руб</strong>
                             </div>
                         </div>
-                        <p>Логотип – это своего рода «лицо» любой компании. Создание грамотного во всех смыслах, привлекательного и запоминающегося логотипа – это поистине целое искусство. Дизайнеры компании LimeMedia в полной мере овладели этим искусством и готовы предложить вам свои услуги по созданию нового уникального логотипа для вашего бизнеса. Кроме того, мы поможем вам обновить уже существующую символику, или создать логотип по вашим эксизам и пожеланиям.</p>
+                        <p>Логотип – это своего рода «лицо» любой компании. Создание грамотного во всех смыслах,
+                            привлекательного и запоминающегося логотипа – это поистине целое искусство. Дизайнеры
+                            компании Лайм Медиа в полной мере овладели этим искусством и готовы предложить вам свои
+                            услуги по созданию нового уникального логотипа для вашего бизнеса. Кроме того, мы поможем
+                            вам обновить уже существующую символику, или создать логотип по вашим эскизам и
+                            пожеланиям.</p>
+
                         <h3>Фирменный стиль</h3>
+
                         <div class="row review_block">
                             <div class="grid_7 reset_align">
                                 <div class="image_content_other">Разработка фирменного стиля</div>
@@ -146,8 +158,16 @@
                                 <strong>от 8 000 000 бел.руб</strong>
                             </div>
                         </div>
-                        <p>Фирменный стиль – это то, без чего не обходится ни один серьезный бизнес. Сюда входит не только создание логотипа и других графических элементов, но также разработка и создание фирменных бланков и визиток. Создание своего фирменного стиля – это первый, и несомненно самый важный шаг к грамотному позиционированию вашей компании, выделению ее среди множества конкурентов. Профессионалы из LimeMedia быстро и качественно создадут для вас уникальный фирменный стиль, который будет полностью отвечать всем вашим пожеланиям и соответствовать всем стандартам, принятым в этой области.</p>
+                        <p>Фирменный стиль – это то, без чего не обходится ни один серьезный бизнес. Сюда входит не
+                            только создание логотипа и других графических элементов, но также разработка и создание
+                            фирменных бланков и визиток. Создание своего фирменного стиля – это первый, и несомненно
+                            самый важный шаг к грамотному позиционированию вашей компании, выделению ее среди множества
+                            конкурентов. Профессионалы из Лайм Медиа быстро и качественно создадут для вас уникальный
+                            фирменный стиль, который будет полностью отвечать всем вашим пожеланиям и соответствовать
+                            всем стандартам, принятым в этой области.</p>
+
                         <h3>Веб-дизайн</h3>
+
                         <div class="row review_block">
                             <div class="grid_7 reset_align">
                                 <div class="image_content_other">Разработка дизайна веб-сайта</div>
@@ -159,7 +179,13 @@
                                 <strong>от 4 500 000 бел.руб</strong>
                             </div>
                         </div>
-                        <p>Веб-дизайн уже давно стал совершенно самостоятельным видом дизайна со своими стандартами и законами. Создание заметного, узнаваемого, привлекательного, и вместе с тем соответствующего всем современных техническим нормам сайта – дело не из простых. Нужно не только соблюдать различные графические пропорции, но также учитывать нюансы отображения на различных платформах. Однако специалисты компании LimeMedia не привыкли останавливаться перед трудностями - мы уже не первый год создаем красивые и функциональные сайты, и с каждым разом количество довольных нашей работой клиентов лишь увеличивается.</p>
+                        <p>Веб-дизайн уже давно стал совершенно самостоятельным видом дизайна со своими стандартами и
+                            законами. Создание заметного, узнаваемого, привлекательного, и вместе с тем соответствующего
+                            всем современных техническим нормам сайта – дело не из простых. Нужно не только соблюдать
+                            различные графические пропорции, но также учитывать нюансы отображения на различных
+                            платформах. Однако специалисты компании Лайм Медиа не привыкли останавливаться перед
+                            трудностями - мы уже не первый год создаем красивые и функциональные сайты, и с каждым разом
+                            количество довольных нашей работой клиентов лишь увеличивается.</p>
                     </div>
 
                     <div class=" button_services"><a href="#brifdesign" class="fancybox">заказать услугу</a></div>
@@ -176,7 +202,8 @@
     <div class="container">
         <div class="row">
             <div class="grid_8">
-                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> | <a href="#">Все права защищены</a>
+                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> |
+                    <a href="#">Все права защищены</a>
                     <!--<div class="sub-copy">Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>-->
                 </div>
             </div>
@@ -195,26 +222,32 @@
     </div>
 </footer>
 <div class="hidden">
-<form id="brifdesign" class="pop_form">
-    <h3>Контактная информация</h3>
-    <input type="text" name="name"  placeholder="Имя контактного лица" required=""/>
-    <input type="email" name="email"  placeholder="Email" required="" />
-    <input type="text" name="phone" placeholder="Телефон" />
-    <input type="text" name="company_name" placeholder="Название компании" />
-    <h3>Дизайн</h3>
-    <label><input type="checkbox" name="logo" value="context" checked/>Логотип</label><br>
-    <label><input type="checkbox" name="style" value="smm"/>Фирменный стиль</label><br>
-    <label><input type="checkbox" name="brandbook" value="seo" />Брендбук(фирменный стиль + реклама и т.д)</label><br>
-    <input type="text" name="Summ" placeholder="Бюджет" />
-    <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
-    <textarea rows="5" cols="50" name="wishes_design" placeholder="Пожелания(цвет, форма и т.д)" required=""></textarea>
-    <textarea rows="5" cols="50" name="info_cunsumer" placeholder="Информация о потребителе(возраст, статус)" required=""></textarea>
-    <textarea rows="5" cols="50" name="info_place" placeholder="место применения продукции" required=""></textarea>
-    <h3>Дополнительная информация</h3>
-    <!--<input type="text" name="select_price" placeholder="Оринтировоный бюджет" />-->
-    <input type="text" name="know" placeholder="Откуда узнали о нас" />
-    <button type="submit" class="btn">Отправить</button><br />
-</form>
+    <form id="brifdesign" class="pop_form">
+        <h3>Контактная информация</h3>
+        <input type="text" name="name" placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email" placeholder="Email" required=""/>
+        <input type="text" name="phone" placeholder="Телефон"/>
+        <input type="text" name="company_name" placeholder="Название компании"/>
+
+        <h3>Дизайн</h3>
+        <label><input type="checkbox" name="logo" value="context" checked/>Логотип</label><br>
+        <label><input type="checkbox" name="style" value="smm"/>Фирменный стиль</label><br>
+        <label><input type="checkbox" name="brandbook" value="seo"/>Брендбук(фирменный стиль + реклама и
+            т.д)</label><br>
+        <input type="text" name="Summ" placeholder="Бюджет"/>
+        <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
+        <textarea rows="5" cols="50" name="wishes_design" placeholder="Пожелания(цвет, форма и т.д)"
+                  required=""></textarea>
+        <textarea rows="5" cols="50" name="info_cunsumer" placeholder="Информация о потребителе(возраст, статус)"
+                  required=""></textarea>
+        <textarea rows="5" cols="50" name="info_place" placeholder="место применения продукции" required=""></textarea>
+
+        <h3>Дополнительная информация</h3>
+        <!--<input type="text" name="select_price" placeholder="Оринтировоный бюджет" />-->
+        <input type="text" name="know" placeholder="Откуда узнали о нас"/>
+        <button type="submit" class="btn">Отправить</button>
+        <br/>
+    </form>
 
 
 </div>
