--- a/service-develop.html
+++ b/service-develop.html
@@ -3,12 +3,12 @@
 <head>
     <title>Разработка</title>
     <meta charset="utf-8">
-    <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=no"/>
     <link rel="icon" href="images/favicon.ico">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css"/>
-    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" />
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"/>
     <script src="js/jquery.js"></script>
     <script src="js/superfish.js"></script>
     <script src="js/jquery.equalheights.js"></script>
@@ -21,15 +21,17 @@
     <script src="js/common.js"></script>
     <script src="js/wow.js"></script>
     <script>
-        $(window).load(function(){
-            $().UItoTop({ easingType: 'easeOutQuart' });
+        $(window).load(function () {
+            $().UItoTop({easingType: 'easeOutQuart'});
             $('#stuck_container').tmStickUp({});
         });
     </script>
     <!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0"
+                 height="42" width="820"
+                 alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
         </a>
     </div>
     <![endif]-->
@@ -64,10 +66,10 @@
                     <div class="navigation ">
                         <nav>
                             <ul class="sf-menu">
-                                <li ><a href="index.html">Главная</a></li>
+                                <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
                                 <li class="current"><a href="services.html">Услуги</a></li>
-                                <li><a href="blog.html">Новости</a></li>
+                                <li><a href="news.html">Новости</a></li>
                                 <li><a href="contacts.html">Контакты</a></li>
                             </ul>
                         </nav>
@@ -115,22 +117,25 @@
 
                     <div class="text_service">
                         <p class="title_text"></p>
-                            <h2>Разработка Веб-сайта</h2>
+
+                        <h2>Разработка Веб-сайта</h2>
 
                         <p> Вы хотите вывести ваш бизнес на
                             просторы интернета? Мы рады помочь вам в этом.
                             В нашем распоряжении есть самые современные системы управления содержимым
-                            (CMS) Joomla, Wordpress и Bitrix. На их основе можно создать любой ресурс -
+                            (CMS) Joomla, Wordpress и Magento. На их основе можно создать любой ресурс -
                             от сайта-визитки до полноценного портала или интернет-магазина.
-                            Идите в ногу со временем вместе с LimeMedia!</p>
+                            Идите в ногу со временем вместе с Лайм Медиа!</p>
+
                         <h3 id="visitka">Сайт визитка</h3>
+
                         <p>
                             Сайт-визитка – это один из наиболее простых и экономичных способов заявить о себе.
                             Он идеально подходит для продвижения малого или только начинающегося бизнеса.
                             Обычно такой сайт состоит из небольшого количества статичных страниц, на которых
                             вкратце преподносится общая информация о его владельце. Стоимость такого ресурса
                             доступна практически каждому, а польза от его создания несомненна. Сотрудники
-                            LimeMedia не один год занимаются созданием подобных сайтов-визиток для своих клиентов,
+                            Лайм Медиа не один год занимаются созданием подобных сайтов-визиток для своих клиентов,
                             поэтому нам можно доверять!
                         </p>
                         <!--<div class="row">-->
@@ -169,42 +174,78 @@
                         <!--<li>Возможность дополнительного расширения функциональных возможностей сайта.</li>-->
                         <!--</ul>-->
                         <h3 id="landing">Лендинг</h3>
+
                         <p>
                             Лендинг (посадочная страница) – это особым образом созданная веб-страница, привлекающая
                             внимание к определенному продукту или событию. Если вам нужно провести целенаправленную
                             рекламную акцию, конкурс, или просто «продвинуть» новинку – создание лендинга является
-                            идеальным решением для этих задач. Технические мастера компании LImeMedia тесно
+                            идеальным решением для этих задач. Технические мастера компании Лайм Медиа тесно
                             сотрудничают с профессиональными дизайнерами, чтобы сделать посадочные страницы
                             максимально эффективными и привлекательными.
                         </p>
+
                         <div class="row review_block">
                             <div class="grid_10 price_block_landing">
                                 <strong>от 4 000 000 бел.руб</strong>
                             </div>
                             <div class="grid_4">
-                                <div class="image_content_landing"><img src="images/landing%20page.jpg" alt="landing"/></div>
+                                <div class="image_content_landing"><img src="images/landing%20page.jpg" alt="landing"/>
+                                </div>
                             </div>
                             <div class="grid_5 block_about">
 
 
-                                <div class="landing_about"><strong>1 </strong>  <div>  Короткий, но ёмкий заголовок, точно характеризующий направление Вашего бизнеса.</div></div>
-                                <div class="landing_about">  <strong>2 </strong> <div>   Изображение вызывающее чёткие ассоциации с родом деятельности компании.</div></div>
-                                <div class="landing_about">  <strong>3 </strong>  <div>  Фраза, побуждающая потенциального клиента к выполнению необходимого для Вас действия.</div></div>
-                                <div class="landing_about"> <strong>4 </strong>  <div>   Привлекающая внимание кнопка для вызова формы заказа или любой другой формы.</div></div>
-                                <div class="landing_about">  <strong>5 </strong> <div>   Таймер для ограничения срока акции, призванный стимулировать принятие положительного решения клиентом.</div></div>
-                                <div class="landing_about"> <strong>6 </strong>   <div>   Список удачных кейсов, отзывы довольных клиентов, документы и сертификаты.</div></div>
-                                <div class="landing_about">   <strong>7 </strong>  <div>  Блок, в котором пошагово представлены все этапы работы с клиентом или любые иные процессы.</div></div>
+                                <div class="landing_about"><strong>1 </strong>
+
+                                    <div> Короткий, но ёмкий заголовок, точно характеризующий направление Вашего
+                                        бизнеса.
+                                    </div>
+                                </div>
+                                <div class="landing_about"><strong>2 </strong>
+
+                                    <div> Изображение вызывающее чёткие ассоциации с родом деятельности компании.</div>
+                                </div>
+                                <div class="landing_about"><strong>3 </strong>
+
+                                    <div> Фраза, побуждающая потенциального клиента к выполнению необходимого для Вас
+                                        действия.
+                                    </div>
+                                </div>
+                                <div class="landing_about"><strong>4 </strong>
+
+                                    <div> Привлекающая внимание кнопка для вызова формы заказа или любой другой формы.
+                                    </div>
+                                </div>
+                                <div class="landing_about"><strong>5 </strong>
+
+                                    <div> Таймер для ограничения срока акции, призванный стимулировать принятие
+                                        положительного решения клиентом.
+                                    </div>
+                                </div>
+                                <div class="landing_about"><strong>6 </strong>
+
+                                    <div> Список удачных кейсов, отзывы довольных клиентов, документы и сертификаты.
+                                    </div>
+                                </div>
+                                <div class="landing_about"><strong>7 </strong>
+
+                                    <div> Блок, в котором пошагово представлены все этапы работы с клиентом или любые
+                                        иные процессы.
+                                    </div>
+                                </div>
 
 
                             </div>
                         </div>
                         <h3 id="buiseness">Бизнес сайт</h3>
+
                         <p>Бизнес сайты – это целые информационные порталы, с множеством
                             функциональных модулей и разнообразных «фишек». В рамках такого ресурса можно
                             создавать галереи, форумы, новостные и личные блоги, и даже целые сообщества.
-                            LimeMedia использует современные системы управления содержимым
-                            (Content Management Systems, CMS) Joomla, Wordpress и Bitrix,
+                            Лайм Медиа использует современные системы управления содержимым
+                            (Content Management Systems, CMS) Joomla, Wordpress и Magento,
                             позволяющие быстро создать полномасштабный портал и так же просто управлять им.</p>
+
                         <div class="row review_block">
                             <div class="grid_4 reset_align">
                                 <div class="image_content">Бизнес-сайт</div>
@@ -227,12 +268,14 @@
                             </div>
                         </div>
                         <h3 id="internet_store">Интернет-магазин</h3>
+
                         <p>Интернет-магазин – один из самых сложных, но в то же время востребованных
-                            типов вебсайтов. С его помощью можно запросто вывести свой торговые бизнес
+                            типов веб-сайтов. С его помощью можно запросто вывести свой торговые бизнес
                             на международный уровень, найти новых поставщиков, и самое главное –
-                            глобально расширить круг покупателей. В арсенале LimeMedia есть целый
+                            глобально расширить круг покупателей. В арсенале Лайм Медиа есть целый
                             ряд технических и маркетинговых решений для создания удобного и прибыльного
                             интернет-магазина.</p>
+
                         <div class="row review_block">
                             <div class="grid_4 reset_align">
                                 <div class="image_content">Интернет-магазин</div>
@@ -273,43 +316,49 @@
     <div class="container">
         <div class="row">
             <div class="grid_8">
-                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> | <a href="#">Все права защищены</a>
+                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> |
+                    <a href="#">Все права защищены</a>
                     <!--<div class="sub-copy">Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>-->
                 </div>
             </div>
             <div class="grid_4">
                 <!--<div class="social_container wow bounceInRight animated">-->
-                    <!--<ul>-->
-                        <!--<li><a href="#"><img src="images/vk.png"></a></li>-->
-                        <!--<li><a href="#"><img src="images/facebook.png"></a></li>-->
-                        <!--<li><a href="#"><img src="images/twitter.png"></a></li>-->
-                        <!--<li><a href="#"><img src="images/instagram.png"></a></li>-->
-                        <!--<li><a href="#"><img src="images/linkedin.png"></a></li>-->
-                    <!--</ul>-->
+                <!--<ul>-->
+                <!--<li><a href="#"><img src="images/vk.png"></a></li>-->
+                <!--<li><a href="#"><img src="images/facebook.png"></a></li>-->
+                <!--<li><a href="#"><img src="images/twitter.png"></a></li>-->
+                <!--<li><a href="#"><img src="images/instagram.png"></a></li>-->
+                <!--<li><a href="#"><img src="images/linkedin.png"></a></li>-->
+                <!--</ul>-->
                 <!--</div>-->
             </div>
         </div>
     </div>
 </footer>
 <div class="hidden">
-<!-------------------Форма для разработки--------------------->
-<!------------------------------------------------------->
-<!----------------------------------------------------->
-<form id="brifdevelop" class="pop_form">
-    <h3>Контактная информация</h3>
-    <input type="text" name="name"  placeholder="Имя контактного лица" required=""/>
-    <input type="email" name="email"  placeholder="Email" required="" />
-    <input type="text" name="phone" placeholder="Телефон" />
-    <input type="text" name="company_name" placeholder="Название компании" />
-    <h3>О сайте</h3>
-    <textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>
-    <textarea rows="5" cols="50" name="about_site" placeholder="Описание сайта" required=""></textarea>
-    <h3>Дополнительная информация</h3>
-    <!--<input type="text" name="deadline_date" placeholder="Когда нужно сайт?" />-->
-    <input type="text" name="select_price" placeholder="Ориентировочный бюджет" />
-    <input type="text" name="know" placeholder="Откуда узнали о нас" />
-    <button type="submit" class="btn">Отправить</button><br />
-</form>
+    <!-------------------Форма для разработки--------------------->
+    <!------------------------------------------------------->
+    <!----------------------------------------------------->
+    <form id="brifdevelop" class="pop_form">
+        <h3>Контактная информация</h3>
+        <input type="text" name="name" placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email" placeholder="Email" required=""/>
+        <input type="text" name="phone" placeholder="Телефон"/>
+        <input type="text" name="company_name" placeholder="Название компании"/>
+
+        <h3>О сайте</h3>
+        <textarea rows="5" cols="50" name="struct_site"
+                  placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты"
+                  required=""></textarea>
+        <textarea rows="5" cols="50" name="about_site" placeholder="Описание сайта" required=""></textarea>
+
+        <h3>Дополнительная информация</h3>
+        <!--<input type="text" name="deadline_date" placeholder="Когда нужно сайт?" />-->
+        <input type="text" name="select_price" placeholder="Ориентировочный бюджет"/>
+        <input type="text" name="know" placeholder="Откуда узнали о нас"/>
+        <button type="submit" class="btn">Отправить</button>
+        <br/>
+    </form>
 </div>
 <a href="#" id="toTop" class="fa fa-chevron-up"></a>
 </body>
