--- a/contacts.html
+++ b/contacts.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Контакты</title>
-<meta charset="utf-8">
-<meta name="format-detection" content="telephone=no" />
-<link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico" />
-<link rel="stylesheet" href="css/contact-form.css">
-<link rel="stylesheet" href="css/style.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/script.js"></script> 
-<script src="js/superfish.js"></script>
-<script src="js/jquery.equalheights.js"></script>
-<script src="js/jquery.mobilemenu.js"></script>
-<script src="js/tmStickUp.js"></script>
-<script src="js/jquery.ui.totop.js"></script>
-<!--<script src="js/TMForm.js"></script>-->
-<!--<script src="js/modal.js"></script>-->
+    <title>Контакты</title>
+    <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no"/>
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="stylesheet" href="css/contact-form.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery-migrate-1.1.1.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/superfish.js"></script>
+    <script src="js/jquery.equalheights.js"></script>
+    <script src="js/jquery.mobilemenu.js"></script>
+    <script src="js/tmStickUp.js"></script>
+    <script src="js/jquery.ui.totop.js"></script>
+    <!--<script src="js/TMForm.js"></script>-->
+    <!--<script src="js/modal.js"></script>-->
     <script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
+    <script src="js/contact_me.js"></script>
 
-<script>
- $(window).load(function(){
-  $().UItoTop({ easingType: 'easeOutQuart' });
-  $('#stuck_container').tmStickUp({});  
- }); 
-</script>
-<!--[if lt IE 8]>
- <div style=' clear: both; text-align:center; position: relative;'>
-   <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-     <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-   </a>
-</div>
-<![endif]-->
-<!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<link rel="stylesheet" media="screen" href="css/ie.css">
-<![endif]-->
+    <script>
+        $(window).load(function () {
+            $().UItoTop({easingType: 'easeOutQuart'});
+            $('#stuck_container').tmStickUp({});
+        });
+    </script>
+    <!--[if lt IE 8]>
+    <div style=' clear: both; text-align:center; position: relative;'>
+        <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
+            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0"
+                 height="42" width="820"
+                 alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
+        </a>
+    </div>
+    <![endif]-->
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <link rel="stylesheet" media="screen" href="css/ie.css">
+    <![endif]-->
 </head>
 <body>
 <!--==============================
@@ -66,10 +68,10 @@
                     <div class="navigation ">
                         <nav>
                             <ul class="sf-menu">
-                                <li ><a href="index.html">Главная</a></li>
+                                <li><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
-                                <li ><a href="services.html">Услуги</a></li>
-                                <li><a href="blog.html">Новости</a></li>
+                                <li><a href="services.html">Услуги</a></li>
+                                <li><a href="news.html">Новости</a></li>
                                 <li class="current"><a href="contacts.html">Контакты</a></li>
                             </ul>
                         </nav>
@@ -94,122 +96,129 @@
           Content
 ======================-->
 <section id="content">
-  <div class="container">
-    <div class="row">
-      <div class="grid_12">
-          <div id="link_details"><a  href="#">Скачать наши реквизиты</a></div>
-        <div class="map">
-          <figure>
-              <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=XfI9GLgC5NkmiBD3xi0JlCenbma6HBe4&width=100%&height=350"></script>
-          </figure>
-        </div>
-      </div>
-      <div class="grid_5">
-        <h3 class="head__1">Адрес:</h3>
-        <address class="text3">
-          Республика Беларусь<br/> город Минск <br/>пр-д Веснина 12, офис 18
-        </address>
-      </div>
-      <div class="grid_4">
-        <h3 class="head__1">Телефон:</h3>
-        <div class="text3">
-            +375 (17) 210-50-71<br/>
-            +375 (29) 129-95-14<br/>
-            +375 (29) 680-90-30
-        </div>
-      </div>
-      <div class="grid_3">
-        <h3 class="head__1">E-mail:</h3>
-        <div class="text3">
-          <a href="#">info@lmedia.by</a><br>
+    <div class="container">
+        <div class="row">
+            <div class="grid_12">
+                <div id="link_details"><a href="#">Скачать наши реквизиты</a></div>
+                <div class="map">
+                    <figure>
+                        <script type="text/javascript" charset="utf-8"
+                                src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=XfI9GLgC5NkmiBD3xi0JlCenbma6HBe4&width=100%&height=350"></script>
+                    </figure>
+                </div>
+            </div>
+            <div class="grid_5">
+                <h3 class="head__1">Адрес:</h3>
+                <address class="text3">
+                    Республика Беларусь<br/> город Минск <br/>пр-д Веснина 12, офис 18
+                </address>
+            </div>
+            <div class="grid_4">
+                <h3 class="head__1">Телефон:</h3>
 
-        </div>
-      </div>
-      <div class="grid_12">
-        <h3 class="head__1">Напишите нам!</h3>
+                <div class="text3">
+                    +375 (17) 210-50-71<br/>
+                    +375 (29) 129-95-14<br/>
+                    +375 (29) 680-09-35
+                </div>
+            </div>
+            <div class="grid_3">
+                <h3 class="head__1">E-mail:</h3>
 
-          <form name="sentMessage"  id="contactForm"  novalidate>
+                <div class="text3">
+                    <a href="#">info@lmedia.by</a><br>
 
-              <div class="control-group">
-                  <div class="reset_align grid_3 controls contact_item">
-                      <input type="text" class="form-control"
-                             placeholder="Имя" id="name" required
-                             data-validation-required-message="Введите ваше имя" />
-                      <p class="help-block"></p>
-                  </div>
-              </div>
-              <div class="control-group">
-                  <div class="reset_align grid_3 controls contact_item">
-                      <input type="text" class="form-control"
-                             placeholder="Телефон" id="phone" required
-                             data-validation-required-message="Введите ваш телефон" />
-                      <p class="help-block"></p>
-                  </div>
-              </div>
-              <div class="control-group">
-                  <div class="reset_align grid_3 controls contact_item">
-                      <input type="email" class="form-control" placeholder="Email"
-                             id="email" required
-                             data-validation-required-message="Введите ваш Email" />
-                  </div>
-              </div>
+                </div>
+            </div>
+            <div class="grid_12">
+                <h3 class="head__1">Напишите нам!</h3>
 
-              <div class="control-group">
-                  <div class="controls">
+                <form name="sentMessage" id="contactForm" novalidate>
+
+                    <div class="control-group">
+                        <div class="reset_align grid_3 controls contact_item">
+                            <input type="text" class="form-control"
+                                   placeholder="Имя" id="name" required
+                                   data-validation-required-message="Введите ваше имя"/>
+
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="reset_align grid_3 controls contact_item">
+                            <input type="text" class="form-control"
+                                   placeholder="Телефон" id="phone" required
+                                   data-validation-required-message="Введите ваш телефон"/>
+
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="reset_align grid_3 controls contact_item">
+                            <input type="email" class="form-control" placeholder="Email"
+                                   id="email" required
+                                   data-validation-required-message="Введите ваш Email"/>
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <div class="controls">
 				 <textarea rows="10" cols="100" class="form-control"
                            placeholder="Сообщение" id="message" required
                            data-validation-required-message="Введите ваше сообщение" minlength="5"
                            data-validation-minlength-message="минимум 5 символов"
-                           maxlength="999" ></textarea>
-                  </div>
-              </div>
-              <div id="success"> </div> <!-- For success/fail messages -->
-              <button type="submit" class="btn btn-primary pull-right">Отправить</button><br />
-          </form>
+                           maxlength="999"></textarea>
+                        </div>
+                    </div>
+                    <div id="success"></div>
+                    <!-- For success/fail messages -->
+                    <button type="submit" class="btn btn-primary pull-right">Отправить</button>
+                    <br/>
+                </form>
 
-              <!--<div class="contacts_form">-->
-                  <!--<form name="sentMessage" class="well-sm" id="contactForm"  novalidate>-->
+                <!--<div class="contacts_form">-->
+                <!--<form name="sentMessage" class="well-sm" id="contactForm"  novalidate>-->
 
-                      <!--<div class="control-group">-->
-                          <!--<div class="controls">-->
-                              <!--<input type="text" class="form-control"-->
-                                     <!--placeholder="Имя" id="name" required-->
-                                     <!--data-validation-required-message="Введите ваше имя" />-->
-                              <!--<p class="help-block"></p>-->
-                          <!--</div>-->
-                      <!--</div>-->
-                      <!--<div class="control-group">-->
-                          <!--<div class="controls">-->
-                              <!--<input type="text" class="form-control"-->
-                                     <!--placeholder="Телефон" id="phone" required-->
-                                     <!--data-validation-required-message="Введите ваш телефон" />-->
-                              <!--<p class="help-block"></p>-->
-                          <!--</div>-->
-                      <!--</div>-->
-                      <!--<div class="control-group">-->
-                          <!--<div class="controls">-->
-                              <!--<input type="email" class="form-control" placeholder="Email"-->
-                                     <!--id="email" required-->
-                                     <!--data-validation-required-message="Введите ваш Email" />-->
-                          <!--</div>-->
-                      <!--</div>-->
+                <!--<div class="control-group">-->
+                <!--<div class="controls">-->
+                <!--<input type="text" class="form-control"-->
+                <!--placeholder="Имя" id="name" required-->
+                <!--data-validation-required-message="Введите ваше имя" />-->
+                <!--<p class="help-block"></p>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--<div class="control-group">-->
+                <!--<div class="controls">-->
+                <!--<input type="text" class="form-control"-->
+                <!--placeholder="Телефон" id="phone" required-->
+                <!--data-validation-required-message="Введите ваш телефон" />-->
+                <!--<p class="help-block"></p>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--<div class="control-group">-->
+                <!--<div class="controls">-->
+                <!--<input type="email" class="form-control" placeholder="Email"-->
+                <!--id="email" required-->
+                <!--data-validation-required-message="Введите ваш Email" />-->
+                <!--</div>-->
+                <!--</div>-->
 
-                      <!--<div class="control-group">-->
-                          <!--<div class="controls">-->
-				 <!--<textarea rows="10" cols="100" class="form-control"-->
-                           <!--placeholder="Сообщение" id="message" required-->
-                           <!--data-validation-required-message="Введите ваше сообщение" minlength="5"-->
-                           <!--data-validation-minlength-message="минимум 5 символов"-->
-                           <!--maxlength="999" style="resize:none"></textarea>-->
-                          <!--</div>-->
-                      <!--</div>-->
-                      <!--<div id="success"> </div> &lt;!&ndash; For success/fail messages &ndash;&gt;-->
-                      <!--<button type="submit" class="btn btn-primary pull-right">Отправить</button><br />-->
-                  <!--</form>-->
-           </div>
-      </div>
+                <!--<div class="control-group">-->
+                <!--<div class="controls">-->
+                <!--<textarea rows="10" cols="100" class="form-control"-->
+                <!--placeholder="Сообщение" id="message" required-->
+                <!--data-validation-required-message="Введите ваше сообщение" minlength="5"-->
+                <!--data-validation-minlength-message="минимум 5 символов"-->
+                <!--maxlength="999" style="resize:none"></textarea>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--<div id="success"> </div> &lt;!&ndash; For success/fail messages &ndash;&gt;-->
+                <!--<button type="submit" class="btn btn-primary pull-right">Отправить</button><br />-->
+                <!--</form>-->
+            </div>
+        </div>
     </div>
-  <!--</div>-->
+    <!--</div>-->
 </section>
 <!--==============================
               footer
@@ -218,19 +227,19 @@
     <div class="container">
         <div class="row">
             <div class="grid_8">
-                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> | <a href="#">Все права защищены</a>
-                    <!--<div class="sub-copy">Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>-->
+                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> |
+                    <a href="#">Все права защищены</a>
                 </div>
             </div>
             <div class="grid_4">
                 <!--<div class="social_container wow bounceInRight animated">-->
-                    <!--<ul>-->
-                        <!--<li><a href="#"><img src="images/vk.png" alt="Lime Media в контакте"/></a></li>-->
-                        <!--<li><a href="#"><img src="images/facebook.png" alt="Lime Media в facebook" /></a></li>-->
-                        <!--<li><a href="#"><img src="images/twitter.png" alt="Lime Media в твитере" /></a></li>-->
-                        <!--<li><a href="#"><img src="images/instagram.png" alt="Lime Media в инстаграмме"/></a></li>-->
-                        <!--<li><a href="#"><img src="images/linkedin.png" alt="Lime Media на LinkedIn" /></a></li>-->
-                    <!--</ul>-->
+                <!--<ul>-->
+                <!--<li><a href="#"><img src="images/vk.png" alt="Лайм Медиа в контакте"/></a></li>-->
+                <!--<li><a href="#"><img src="images/facebook.png" alt="Лайм Медиа в facebook" /></a></li>-->
+                <!--<li><a href="#"><img src="images/twitter.png" alt="Лайм Медиа в твитере" /></a></li>-->
+                <!--<li><a href="#"><img src="images/instagram.png" alt="Лайм Медиа в инстаграмме"/></a></li>-->
+                <!--<li><a href="#"><img src="images/linkedin.png" alt="Лайм Медиа на LinkedIn" /></a></li>-->
+                <!--</ul>-->
                 <!--</div>-->
             </div>
         </div>
