--- a/news.html
+++ b/news.html
@@ -63,7 +63,7 @@
                   <li ><a href="index.html">Главная</a></li>
                   <li><a href="about.html">О нас</a></li>
                   <li><a href="services.html">Услуги</a></li>
-                  <li class="current"><a href="blog.html">Новости</a></li>
+                  <li class="current"><a href="news.html">Новости</a></li>
                   <li><a href="contacts.html">Контакты</a></li>
              </ul>
             </nav>
